            ----------------------------------------------

This file should be used to summarize modifications introduced in the 
code and to keep track of all tags.

     ---------------------------------------------------------------
     * Please list in reverse chronological order (last date on top)
     ---------------------------------------------------------------

03 February 2014 Gunter Folger (hadr-man-V09-06-04)
---------------------------------------------------
- G4HadronicProcess: in EnergyMomentumCheck... add printout of 3momentum  

20 June 2013  Dennis Wright  (hadr-man-V09-06-03)
-------------------------------------------------
- G4EnergyRangeManager : re-order initialization of hadronicInteractionCounter
  in copy ctor and assignment operator to satisfy coverity

19 April 2013 Tatsumi Koi (hadr-man-V09-06-02)
-------------------------------------------------------
- Add dump method
	include/G4EnergyRangeManager.hh
	src/G4EnergyRangeManager.cc
     
 7 March 2013 michel maire  (hadr-man-V09-06-01)
- G4HadronicProcessStore- Dump and Print: cosmetic in Processes summary 
     
30 January 2013 michel maire  (hadr-man-V09-06-00)
-------------------------------------------------------
- G4HadronicProcessStore::GetCrossSectionPerAtom() - add material
    
14 November 2012 Vladimir Ivantchenko  (hadr-man-V09-05-24)
-------------------------------------------------------
- G4HadronicProcess.cc - added full printout about hadronic exception 
    inside G4Exception printout, fixed bug#1377

14 November 2012 Vladimir Ivantchenko  (hadr-man-V09-05-23)
-------------------------------------------------------
- G4HadronicProcess.cc - added catch of G4HadronicException
    inside BuildPhysicsTable method

11 October 2012 Krzysztof Genser   (hadr-man-V09-05-22)
-------------------------------------------------------
- G4HadronicProcessType.hh added fLeptonAtRest

01 October 2012 Alberto Ribon      (hadr-man-V09-05-21)